feat: 비공개 테스트 배포 버전 세팅, 아이콘 적용, 바텀 네비게이션 바 시스템 인셋 대응 및 일관성 개선

--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,11 @@
 local.properties
 .idea/ChatHistory_schema_v2.xml
 .idea/
+
+# Keystore files (보안상 중요!)
+*.keystore
+*.jks
+release.keystore
+
+# Gradle properties with sensitive info
+gradle.properties
