--- a/gradle.properties
+++ b/gradle.properties
@@ -21,3 +21,8 @@ kotlin.code.style=official
 # resources declared in the library itself and none from the library's dependencies,
 # thereby reducing the size of the R class for that library
 android.nonTransitiveRClass=true
+# Release signing config
+MYAPP_RELEASE_STORE_FILE=release.keystore
+MYAPP_RELEASE_KEY_ALIAS=prography
+MYAPP_RELEASE_STORE_PASSWORD=ProGraphy2025#
+MYAPP_RELEASE_KEY_PASSWORD=ProGraphy2025#
