feat: FCM 푸시 알림 기능 구현
- Firebase Cloud Messaging 초기 설정 및 연동
- FCM 토큰 발급 및 관리 시스템 구현
- 회원가입 시 FCM 토큰 서버 전송 기능 추가
- 푸시 메시지 수신 및 처리 로직 구현
- FCM 토큰 업데이트 API 연동
- 로그인 상태에 따른 FCM 토큰 자동 갱신 처리
- 백그라운드/포그라운드 알림 처리 분기
- Firebase 종속성 및 권한 설정 추가

주요 구현 사항:
• FcmTokenManager: FCM 토큰 발급/갱신 관리
• MyFirebaseMessagingService: 푸시 메시지 수신 처리
• AuthRepository: FCM 토큰 서버 업데이트 기능
• SignupViewModel: 회원가입 시 FCM 토큰 포함
• API 엔드포인트: /api/members/fcm-token 추가

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,12 @@
     <!-- 갤러리 접근 권한 (Android 13 이상) -->
     <uses-permission android:name="android.permission.READ_MEDIA_IMAGES" />
 
+    <!-- FCM 권한 -->
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
+    <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
+    <!-- Android 13+ 알림 권한 -->
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
+
     <uses-feature
         android:name="android.hardware.camera"
         android:required="false" />
@@ -43,6 +49,24 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <!-- Firebase Cloud Messaging 서비스 -->
+        <service
+            android:name="com.luckydut97.tennispark.core.fcm.MyFirebaseMessagingService"
+            android:exported="false">
+            <intent-filter>
+                <action android:name="com.google.firebase.MESSAGING_EVENT" />
+            </intent-filter>
+        </service>
+
+        <!-- FCM 기본 알림 아이콘 설정 -->
+        <meta-data
+            android:name="com.google.firebase.messaging.default_notification_icon"
+            android:resource="@mipmap/ic_launcher" />
+        <meta-data
+            android:name="com.google.firebase.messaging.default_notification_color"
+            android:resource="@color/ic_launcher_background" />
+
     </application>
 
 </manifest>
